small styling and meta changes

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bg">
 
 <head>
   <meta charset="utf-8">
@@ -22,12 +22,12 @@
     -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-  <title>React App</title>
+  <title>Система</title>
 </head>
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
+    Трябва да пуснете javascript, за да ползвате този сайт.
   </noscript>
   <div id="root"></div>
   <!--
